--- a/Fall2024-Assignment3-lkelly3/Views/Actors/Details.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/Actors/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fall2024_Assignment3_lkelly3.Models.Actors
+﻿@model Fall2024_Assignment3_lkelly3.Models.ActorsDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,38 +11,95 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Actor.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Actor.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Link)
+            @Html.DisplayNameFor(model => model.Actor.Link)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Link)
+            @Html.DisplayFor(model => model.Actor.Link)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gender)
+            @Html.DisplayNameFor(model => model.Actor.Gender)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gender)
+            @Html.DisplayFor(model => model.Actor.Gender)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.Actor.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.Actor.Age)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
+
+            @Html.DisplayNameFor(model => model.Actor.Photo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo)
+            @if (Model.Actor.Photo != null)
+            {
+                var base64 = Convert.ToBase64String(Model.Actor.Photo);
+                var imgSrc = $"data:image/jpeg;base64,{base64}";
+                <img src="@imgSrc" height="100" width="100" />
+            }
+            
         </dd>
     </dl>
 </div>
+
+
+<h5>Movies</h5>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Movies)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-controller="Movies" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-controller="Movies" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h3>Reviews and Ratings</h3>
+
+<h4>Overall Rating: @Model.Sentiment</h4>
+
+<table class = "table">
+    <thead>
+        <tr>
+            <th>Review</th>
+            <th>Sentiment</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var tweet in Model.Tweets)
+        {
+            <tr>
+                <td>@tweet.ReviewText</td>
+                <td>@tweet.SentimentAnalysis</td>
+            </tr>
+        }
+    </tbody>
+</table>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Actor.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
