--- a/Fall2024-Assignment3-lkelly3/Views/Actors/Index.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/Actors/Index.cshtml
@@ -15,9 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th> 
-                @Html.DisplayNameFor(model => model.Link)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
@@ -25,6 +23,7 @@
                 @Html.DisplayNameFor(model => model.Age)
             </th>
             <th>
+
                 @Html.DisplayNameFor(model => model.Photo)
             </th>
             <th></th>
@@ -36,9 +35,7 @@
              <td>
                  @Html.DisplayFor(modelItem => item.Name)
              </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.Gender)
             </td>
@@ -46,7 +43,16 @@
                 @Html.DisplayFor(modelItem => item.Age)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Photo)
+                    @if (item.Photo != null)
+                    {
+                        // Embed photo in page; good for security but bad for speed
+                        var base64 = Convert.ToBase64String(item.Photo);
+                        var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64);
+                        <img src="@imgSrc" height="100" width="100"/>
+
+                        
+                    }
+
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
