--- a/Fall2024-Assignment3-lkelly3/Views/MovieActor/Details.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/MovieActor/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.Actors)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Actors.Id)
+            @Html.DisplayFor(model => model.Actors.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Movies)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Movies.Id)
+            @Html.DisplayFor(model => model.Movies.Title)
         </dd>
     </dl>
 </div>
