--- a/Fall2024-Assignment3-lkelly3/Views/Movies/Create.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/Movies/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Poster" class="control-label"></label>
-                <input asp-for="Poster" class="form-control" />
+                <input asp-for="Poster" type="file" class="form-control" />
                 <span asp-validation-for="Poster" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -48,3 +48,9 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
