--- a/Fall2024-Assignment3-lkelly3/Views/Movies/Index.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/Movies/Index.cshtml
@@ -15,9 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Link)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.Genre)
             </th>
@@ -36,9 +34,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.Genre)
             </td>
@@ -46,7 +42,12 @@
                 @Html.DisplayFor(modelItem => item.Year)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Poster)
+                    @if (item.Poster != null)
+                    {
+                        var base64 = Convert.ToBase64String(item.Poster);
+                        var imgSrc = $"data:image/jpg;base64,{base64}"; // Assuming the poster is a jpeg
+                        <img src="@imgSrc" height="200" width="150" />
+                    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
