--- a/Fall2024-Assignment3-lkelly3/Views/Movies/Delete.cshtml
+++ b/Fall2024-Assignment3-lkelly3/Views/Movies/Delete.cshtml
@@ -21,7 +21,9 @@
             @Html.DisplayNameFor(model => model.Link)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Link)
+            <!--@Html.DisplayFor(model => model.Link)-->
+            <!--Above line shows link text, but it is not a clickable hyperlink-->
+            <a href="@Model.Link" target="_blank">@Model.Link</a>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Genre)
@@ -35,11 +37,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Year)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+
             @Html.DisplayNameFor(model => model.Poster)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Poster)
+        <dd class="col-sm-10">
+            @if (Model.Poster != null)
+            {
+                var base64 = Convert.ToBase64String(Model.Poster);
+                var imgSrc = $"data:image/jpeg;base64,{base64}";
+                <img src="@imgSrc" height="100" width="100" />
+            }
+
         </dd>
     </dl>
     
